--- a/fa2024/lectures/lecture-28.qmd
+++ b/fa2024/lectures/lecture-28.qmd
@@ -1,7 +1,7 @@
 ---
 date: 12/4/2024
 lecture-id: 28
-title: Triggers
+title: Triggers, Views and Security
 ---
 
 ```{python}
@@ -17,17 +17,45 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'CMSC 427 - User Interfaces - Spring 2025',
+    '[Homework 9 - WB Population Analysis - due 12/8](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1047918){target="_blank"}',
+    '[Homework 10 - Course evaluation - due 12/8](https://virginiacommonwealth.instructure.com/courses/105097/assignments/969453){target="_blank"}',
+    '[Deliverable 12 - Semester Project - due 12/9](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966535){target="_blank"}',
+    'Catch up on other assignments ...',
+    'Next Monday - work session ...'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    '[Triggers](#triggers-in-sql)',
+    '[Views](#views-in-sql)',
+    '[SQL Injection](#sql-injection)',
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+##
 
+::: {style="font-size:3.0em; text-align:center; font-weight:bold;"}
+Submission Deadline
+
+This Monday - 12/9 - by Midnight
+
+No late work will be accepted.
+:::
+
+{{< include "../../topics/_triggers.qmd" >}}
+{{< include "../../topics/_views.qmd" >}}
+{{< include "../../topics/_sql-injection.qmd" >}}
+
+## 
+::: {style="font-size:3.0em; text-align:center; font-weight:bold;"}
+Submission Deadline
+
+This Monday - 12/9 - by Midnight
+
+No late work will be accepted.
+:::
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
