--- a/fa2024/lectures/lecture-29.qmd
+++ b/fa2024/lectures/lecture-29.qmd
@@ -17,9 +17,11 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'CMSC 427 - User Interfaces - Spring 2025',
+    '[Homework 9 - WB Population Analysis - due 12/9](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1047918){target="_blank"}',
+    '[Homework 10 - Course evaluation - due 12/9](https://virginiacommonwealth.instructure.com/courses/105097/assignments/969453){target="_blank"}',
+    '[Deliverable 12 - Semester Project - due 12/9](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966535){target="_blank"}'
 ]
-
 lecture_topics = [
     'When ready, the complete lecture will replace this one.'
 ]
@@ -28,6 +30,14 @@ lecture_topics = [
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+##
 
+::: {style="font-size:3.0em; text-align:center; font-weight:bold;"}
+Submission Deadline
+
+TONIGHT - 12/9 - by Midnight
+
+No late work will be accepted.
+:::
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
