rework of detailed gantt

--- a/sp2025/gantts/detailed-gantt.qmd
+++ b/sp2025/gantts/detailed-gantt.qmd
@@ -77,13 +77,15 @@ def make_gantt():
 
     for i,item in summary_df.iterrows():
         deliverables_df = objects_df[ (objects_df['module']==item['Module']) & (objects_df['canvas_assignment_group']!="Projects") ]
-        if not deliverables_df.empty:
-            deliverables_df = deliverables_df.sort_values(by='canvas_due_at').reset_index(drop=True)
-            content.append(f"    section {item['Module']}")
-            content.append(f"    {item['Module']} : m{i}, {item['earliest_date']}, {item['latest_date']}")
-            for j,row in deliverables_df.iterrows():
-                content.append(f"    {clean_title(row['outline_entry'])} : milestone, {row['canvas_due_at']}, 0d")
-            content.append("")
+        deliverables_df = objects_df[ (objects_df['module']==item['Module']) & (objects_df['canvas_assignment_group']!="Projects") ]
+
+ #       if not deliverables_df.empty:
+        deliverables_df = deliverables_df.sort_values(by='canvas_due_at').reset_index(drop=True)
+        content.append(f"    section {item['Module']}")
+        content.append(f"    {item['Module']} : m{i}, {item['earliest_date']}, {item['latest_date']}")
+        for j,row in deliverables_df.iterrows():
+            content.append(f"    {clean_title(row['outline_entry'])} : milestone, {row['canvas_due_at']}, 0d")
+        content.append("")
 
     projects_df = objects_df[ (objects_df['canvas_assignment_group']=="Projects") ]
     if not projects_df.empty:
