--- a/sp2025/details/week-10-details.qmd
+++ b/sp2025/details/week-10-details.qmd
@@ -3,6 +3,54 @@ date: last-modified
 title: Week 10 - Details
 ---
 
-Week 10 - Details
+```{python}
+#| label: Loading canvas data
+from cnvsapi.config import config
+from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, expand_file
 
-This is a template file.  Have at it!
+# Uncomment as necessary.  These take time to load so only use what you need.
+
+#pages = config.get_pages()
+#quizzes = config.get_quizzes()
+#assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
+#files = config.get_files()
+
+# Here is an example of how these are expanded.
+# expand_xxx( xxx, "title","resource name", url_type, **kwargs )
+# url_type="anchor" ->  <a href="resource name" **kwargs>title</a>
+# url_type="img" -> <img src="resource_name" title="title" **kwargs )
+#
+# expand_quiz(quizzes, "Take the Pre-class survey","pre-class survey", url_type="anchor", target="_blank")
+# expand_page(pages, "Join the course discord","resource-course-discord", url_type="anchor", target="_blank")
+# expand_assignment(assignments,"Course Syllabus","syllabus",url_type="anchor")
+# expand_file("Picture of me","headshot-20210731.png",url_type="img", width="200px")
+
+```
+
+<p class="lead">Welcome to a new week!</p>
+
+*Details will be updated closer to the week.*
+
+
+```{python}
+# example of grid using the designplus kl_large_link_grid class.
+#print(f"""
+#<ul class="kl_large_link_grid">
+#<li>{expand_page(pages,"Course Instructor","course-instructor",url_type="anchor")}</li>
+#<li>{expand_assignment(assignments,"Course Syllabus","syllabus",url_type="anchor")}</li>
+#<li>{expand_page(pages,"Course Textbooks","resource-textbooks",url_type="anchor")}</li>
+#<li>{expand_page(pages,"Student Resources","resource-student-resources",url_type="anchor")}</li>
+#<li>{expand_page(pages,"Canvas Resources","resource-canvas-resources",url_type="anchor")}</li>
+#<li>{expand_page(pages,"SAVE YOU HOURS&trade;","resource-save-you-hours",url_type="anchor")}</li>
+#</ul>
+#""")
+```
+
+```{python}
+## This is an example of how one includes an image within the page.
+## Note that other html attributes (e.g., width=, height=, etc.) can be added
+## This will return a canvas-ready <img /> tag .
+#print(f"""
+#{expand_file("Picture of me","headshot-20210731.png",url_type="img", width="200px")}
+#""")
+```
