--- a/topics/_cmsc408-overview-sp2025.qmd
+++ b/topics/_cmsc408-overview-sp2025.qmd
@@ -1,3 +1,4 @@
+
 ## I'm glad you're here!!!!
 
 &nbsp;
@@ -5,7 +6,7 @@
 :::: {.columns}
 
 ::: {.column}
-### CMSC 508 - Database Theory
+### CMSC 408 - Database Theory
 
 * Semester course;
 * 3 lecture hours. 3 credits. 
@@ -19,10 +20,54 @@ Students will be required to complete a design project and give an oral presenta
 ![<https://spectrum.ieee.org/the-rise-of-sql>](assets/L01-rise-of-sql.png){fig-align="center"}
 :::
 
-
 ::::
 
-## Recommended Textbooks
+## CMSC 408 - Course overview
+
+:::: {.columns}
+::: {.column width=40%}
+### Course Topics
+
+* Entity Relation Modeling
+    - How do we represent the real-world in a database?
+
+* Relational Algebra
+    - Underlying mechanics of sorting and searching
+
+* Normalization
+    - What makes a database suck?
+
+* SQL 
+    - Where the rubber meets the road.
+
+:::
+::: {.column width=25%}
+### Course resources
+
+* [Course canvas](https://virginiacommonwealth.instructure.com/courses/113813)
+* [Course syllabus](https://virginiacommonwealth.instructure.com/courses/113813/assignments/syllabus)
+* [Course calendar](https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-outine)
+* [Course Gantt](https://lowkeylabs.github.io/cmsc408-course-admin/sp2025/detailed-gantt.html)
+* [Course discord](https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-discord)
+* [Course assignments](https://virginiacommonwealth.instructure.com/courses/113813/assignments)
+* [Semester project](https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-project)
+  
+:::
+
+::: {.column width=35%}
+### Course assessment
+
+* 25% - Semester-long project 
+* 30% - Weekly homework assignments (9 or so in total) 
+* 20% - Four on-line, canvas multiple choice. Practice quizzes provided.
+* 15% - Four on-line discussions.
+* 10% - Two graded surveys.
+* No final examination.
+
+:::
+::::
+
+## CMSC 408 - Recommended Textbooks
 
 :::: {.columns}
 ::: {.column}
@@ -42,19 +87,40 @@ No, you don't. These textbooks are *really good* and package lots of information
 *Life is a database* and from my perspective it's all about speed of retrieval. When I'm building databases, I can't EVER recall pulling out a text book to look something up!
 :::
 
-## Canvas is the OFFICIAL platform
+## CMSC 408 - Roles and Responsibilities
 
-::: {.more-separation}
-* YOU are responsible for your own LEARNING. My role is GUIDE and CURATOR.
-
-* WE are working together as a TEAM so that at completion of the course, you are comfortable with designing and building databases.
-
-* ANYTHING posted to the course canvas is FAIR GAME to be tested. If I think it's important enough to be shared as part of the course materials on Canvas, I believe that it's important enough for you to be familiar with it and possibly tested on it.
-
-* I will OFTEN not be able to cover all the material relevant to a specific topic in class. That does NOT mean that it isn't important. Even if I don’t complete the lecture slides during a class session, you should be familiar with ALL the material in the slides. ANYTHING in the lecture slides is FAIR GAME for testing.
+:::: {.columns}
+::: {.column width=10%}
+&nbsp;
 :::
+::: {.column width=40%}
+### Instructor roles and responsibilities:
 
-## Statement on Generative AI
+* I am your guide and mentor.
+* I will pick the topics and curate materials.
+* I will get you started on the homework assignments.
+* I will use lectures sparingly: intro to new topics, and intro to homeworks, and questions.
+* I will not lecture just to hear myself talk. That is why we have Youtube!
+
+:::
+::: {.column width=5%}
+&nbsp;
+:::
+::: {.column width="40%"}
+### Student roles and responsibilities:
+
+* Review the course resources,
+* Invest the necessary time ... EARLY,
+* Get started on homeworks ... EARLY,
+* Complete the homeworks on-time,
+* Complete the quizzes on-time,
+* Breath and have fun,
+* You picked CS for a reason - this is it!
+
+:::
+::::
+
+## CMSC 408 - Statement on Generative AI
 
 * Grades for the course are assigned based on YOUR work, not the work of chatgpt, bard or some other generative AI tool. Grades help YOU understand where you are on the journey towards mastery of any pile of material.
 
@@ -64,10 +130,10 @@ No, you don't. These textbooks are *really good* and package lots of information
 
 * Quizzes are designed to test your knowledge of the course material. **Use of Generative AI is NOT permitted on any of the quizzes.**
 
-* See [this document](https://virginiacommonwealth.instructure.com/courses/105097/files/12032089?wrap=1) to learn more!
+* See [this document](https://virginiacommonwealth.instructure.com/courses/113813/files?preview=14026400) to learn more!
 
 
-## ABET Student Learning Outcomes
+## CMSC 408 - ABET Student Learning Outcomes
 
 ::: {.more-separation}
 
@@ -152,72 +218,6 @@ We'll be learning docker to containerize a database and application and automate
 :::
 ::::
 
-## CMSC 408 - Assessment and Grading
-
-:::: {.columns}
-::: {.column}
-### Course Links
-[Course Gantt Chart](https://lowkeylabs.github.io/cmsc408-course-admin/sp2025/detailed-gantt.html){target="_blank"}
-
-[Assignments and Grading](https://virginiacommonwealth.instructure.com/courses/113813/assignments){target="_blank"}
-
-:::
-::: {.column}
-### Assignment Groups
-| Group     | Weight     | Notes     |
-|--------------|--------------|--------------|
-| Projects | 20% | 7 deliverables. |
-| Graded discussions | 15% | Four discussions |
-| Homeworks | 30% | 9 homework assignments |
-| Graded Surveys | 10% | 2 graded surveys |
-| Graded Quizzes | 25% | 4 graded quizzes |
-| Practice Quizzes | 0% | Not counted towards final grade. |
-:::
-::::
-
-
-## CMSC 408 - Assessment and Grading
-
-### Homework Policies
-
-::: {.smaller}
-* I observe [flexible deadlines](https://eric.ed.gov/?id=EJ1367855) for homework, NOT FOR QUIZZES OR DELIVERABLES!
-
-* Each homework has a *timeliness* score in the rubric.  *On-time* gets full credit.  The *timeliness score* is reduced slowly past the submission date.
-
-* You will ALWAYS get credit for submitting assignments. ALWAYS turn something in! I want you to get the practice and LEARN!
-
-* I realize this is NOT your only class.  But don't get too far behind!
-
-* READ homework rubrics to see expectations for each assignment.  The rubrics will help you understand what's important and where you should spend your time.
-
-* The homework assignments are generally aligned with the semester project, so that one reinforces the other.  It pays to keep up!
-
-:::
-
-## CMSC 408 - Assessment and Grading
-
-This will be a busy semester! There will be items due each week.
-
-### Quizzes
-
-::: {style="font-size:0.9em;"}
-Quizzes will be administered on-line using the Respondus lockdown browser. It is the responsibility of the student to ensure that Respondus works.  Quizzes will be adminstered outside of class.  NO LATE QUIZZES.
-
-Practice quizzes will be available. You can take practice quiz as many times as you like.  Practice quiz will look exactly like the actual quiz.  Expect each quiz to take 30-minutes or less.
-:::
-
-
-## CMSC 408 - Assessment and Grading
-
-This will be a busy semester! There will be items due each week.
-
-### Semester-long project
-
-::: {style="font-size:0.9em;"}
-Students will work in teams of 2 on a semester-long project. The project will
-require the students design, build and deploy a database driven web application.  *Team Update* deliverables are brief surveys reflecting on project status, and should only take about 5-min to complete.
-:::
 
 ## CMSC 408 - Assessment and Grading
 
@@ -236,11 +236,11 @@ Below are tables presenting the grading scheme and deliverable list for the clas
 ### Assignment Groups
 | Group     | Weight     | Notes     |
 |--------------|--------------|--------------|
-| Projects | 20% | 7 deliverables. |
+| Projects | 25% | 7 deliverables. |
 | Graded discussions | 15% | Four discussions |
 | Homeworks | 30% | 9 homework assignments |
 | Graded Surveys | 10% | 2 graded surveys |
-| Graded Quizzes | 25% | 4 graded quizzes |
+| Graded Quizzes | 20% | 4 graded quizzes |
 | Practice Quizzes | 0% | Not counted towards final grade. |
 </center>
 
